kubernetes/apps/home-assistant/home-assistant/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Home Assistant"
    homepage.shamubernetes.com/description: "Control the house"
    homepage.shamubernetes.com/group: "Home"
    homepage.shamubernetes.com/order: "10"
    homepage.shamubernetes.com/favorite: "true"
    homepage.shamubernetes.com/icon: "dashboard-icons:home-assistant"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "ha.${HOME_DOMAIN}"
  rules:
  -
    backendRefs:
    - name: home-assistant
      port: 8123
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-code-server-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "code.ha.${HOME_DOMAIN}"
  rules:
  -
    backendRefs:
    - name: home-assistant
      port: 12321
